2015-12-07  Kirit Saelensminde  <kirit@felspar.com>
 Allow HMAC with std::array<unsigned char, n> secrets.

2015-11-21  Kirit Saelensminde  <kirit@felspar.com>
 gcc doesn't really get [[deprecated]] so disable the warnings.

2015-10-28  Kirit Saelensminde  <kirit@felspar.com>
 Add a new `werror` build option which sets the `-Werror` compile flag and turns warnings into errors. Fix remaining warnings in clang builds.

2015-10-23  Kirit Saelensminde  <kirit@felspar.com>
 Deprecated the `fostlib::exceptions::exception::info` members. Added a coercion from `fostlib::exceptions::exception`  to `fostlib::json`. Add a new forwarded exception type. Add `#define` `FOST_NO_STD_EXCEPTION_PTR` to control use of `std::exception_ptr`.

2015-10-10  Kirit Saelensminde  <kirit@felspar.com>
 Fix a problem with the variadic `insert` where it expected a `jcursor` rather than converted to one.

2015-09-27  Kirit Saelensminde  <kirit@felspar.com>
 Add digest and HMAC overloads for `std::vector<unsignec char>`.

2015-08-21  Kirit Saelensminde  <kirit@felspar.com>
 Moved the tagged string header.

2015-07-22  Kirit Saelensminde  <kirit@felspar.com>
 The performance counter now takes a variadic constructor to build the path that it will be recorded into.
 Changed the `jcursor` constructors to be properly variadic.

2015-06-20  Kirit Saelensminde  <kirit@felspar.com>
 Added a mechanism for setting modules that are part of a system. The log messages now make use of this so it's easier to track where log messages come from.

2015-06-19  Kirit Saelensminde  <kirit@felspar.com>
 * `fostlib::push_back` now accepts a `fostlib::json::array_t`.
 * Deprecate `fostlib::counter`.

2015-06-16  Kirit Saelensminde  <kirit@felspar.com>
 Use `std::rethrow_exception` to move an exception between threads.

2015-06-14  Kirit Saelensminde  <kirit@felspar.com>
 Added variadic versions of `fostlib::push_back` and `fostlib::insert`.

2015-06-10  Kirit Saelensminde  <kirit@felspar.com>